--- a/slides/EDUC641_2_categ_1.Rmd
+++ b/slides/EDUC641_2_categ_1.Rmd
@@ -220,7 +220,8 @@ rd <- ggplot(df, aes(rdefend)) + geom_bar() +
 ```
 
 ```{r, echo=F, fig.height=4}
-rd + geom_text(aes(label = ..count..), stat='count', vjust = -0.5)
+rd + geom_text(aes(label = ..count..), stat='count', vjust = -0.5) +
+    theme_minimal(base_size = 16)
 ```
 
 > After inspecting this *chart* of the values of the variable *RDEFEND* in our data, we conclude ...
