--- a/slides/EDUC641_4_continuous_3.Rmd
+++ b/slides/EDUC641_4_continuous_3.Rmd
@@ -143,7 +143,9 @@ for(S in 1:nsim){
   X[S,2] = rbinom(n=1, size = S, prob = .5)/S
 }
 X = as.data.frame(X); names(X) = c("num", "coin")
-coin_true <- X %>% ggplot(aes(x = num, y= coin)) + geom_line() + geom_hline(aes(yintercept = .5), color = "red", linetype = 2) + scale_x_continuous("Number of tosses") + scale_y_continuous("Proportion of heads", breaks = seq(0, 1, .1), limits = c(0,1)) 
+coin_true <- X %>% ggplot(aes(x = num, y= coin)) + geom_line() + geom_hline(aes(yintercept = .5), color = "red", linetype = 2) +      scale_x_continuous("Number of tosses") + 
+  scale_y_continuous("Proportion of heads", breaks = seq(0, 1, .1), limits = c(0,1)) +
+    theme_minimal(base_size = 16)
 coin_true
 ```
 
@@ -162,7 +164,9 @@ for(S in 1:nsim){
   Y[S,2] = rbinom(n=1, size = S, prob = .6)/S
 }
 Y = as.data.frame(Y); names(Y) = c("num", "coin")
-filter(Y, num <=50) %>% ggplot(aes(x = num, y= coin)) + geom_line() + geom_hline(aes(yintercept = .5), color = "red", linetype = 2) + scale_x_continuous("Number of tosses") + scale_y_continuous("Proportion of heads", breaks = seq(0, 1, .1), limits = c(0,1)) 
+filter(Y, num <=50) %>% ggplot(aes(x = num, y= coin)) + geom_line() + geom_hline(aes(yintercept = .5), color = "red", linetype = 2) + scale_x_continuous("Number of tosses") + 
+  scale_y_continuous("Proportion of heads", breaks = seq(0, 1, .1), limits = c(0,1)) +
+    theme_minimal(base_size = 16)
 
 ```
 
@@ -174,7 +178,11 @@ We are asking how likely is it that we observe event X happening with Y frequenc
 <span style="color:blue"> *Imagine you were handed a coin and asked to determine whether it was weighted to one side. How certain would you be after 200 flips?* </span>
 
 ```{r, echo=F, fig.height=3.5}
-filter(Y, num <=200) %>% ggplot(aes(x = num, y= coin)) + geom_line() + geom_hline(aes(yintercept = .5), color = "red", linetype = 2) + scale_x_continuous("Number of tosses") + scale_y_continuous("Proportion of heads", breaks = seq(0, 1, .1), limits = c(0,1)) 
+filter(Y, num <=200) %>% ggplot(aes(x = num, y= coin)) + 
+  geom_line() + geom_hline(aes(yintercept = .5), color = "red", linetype = 2) + 
+  scale_x_continuous("Number of tosses") + 
+  scale_y_continuous("Proportion of heads", breaks = seq(0, 1, .1), limits = c(0,1)) +
+    theme_minimal(base_size = 16)
 
 ```
 
@@ -186,7 +194,12 @@ We are asking how likely is it that we observe event X happening with Y frequenc
 <span style="color:blue"> *Imagine you were handed a coin and asked to determine whether it was weighted to one side. How certain would you be after 2000 flips?* </span>
 
 ```{r, echo=F, fig.height=3.5}
-Y %>% ggplot(aes(x = num, y= coin)) + geom_line() + geom_hline(aes(yintercept = .5), color = "red", linetype = 2) + scale_x_continuous("Number of tosses", limits = c(0,2000)) + scale_y_continuous("Proportion of heads", breaks = seq(0, 1, .1), limits = c(0,1)) 
+Y %>% ggplot(aes(x = num, y= coin)) + 
+  geom_line() + 
+  geom_hline(aes(yintercept = .5), color = "red", linetype = 2) + 
+  scale_x_continuous("Number of tosses", limits = c(0,2000)) + 
+  scale_y_continuous("Proportion of heads", breaks = seq(0, 1, .1), limits = c(0,1)) +
+    theme_minimal(base_size = 16)
 
 ```
 
